@@ -22,28 +22,34 @@ import org.openrewrite.test.RecipeSpec;
 import org.openrewrite.test.RewriteTest;
 
 import java.util.Arrays;
+import java.util.List;
 
 import static java.util.Collections.emptyList;
 import static org.openrewrite.java.Assertions.java;
 import static org.openrewrite.style.LineWrapSetting.*;
+import static org.openrewrite.style.StyleHelper.fromStyles;
 import static org.openrewrite.test.RewriteTest.toRecipe;
 
 class WrapMethodDeclarationParametersTest implements RewriteTest {
 
     @Override
     public void defaults(RecipeSpec spec) {
-        spec.recipe(toRecipe(() -> new WrappingAndBracesVisitor<>(new WrappingAndBracesStyle(
-          120,
-          new WrappingAndBracesStyle.IfStatement(false),
-          new WrappingAndBracesStyle.ChainedMethodCalls(WrapAlways, Arrays.asList("builder", "newBuilder"), false),
-          new WrappingAndBracesStyle.MethodDeclarationParameters(WrapAlways, false, true, false),
-          new WrappingAndBracesStyle.MethodCallArguments(DoNotWrap, false, false, false),
-          new WrappingAndBracesStyle.Annotations(WrapAlways),
-          new WrappingAndBracesStyle.Annotations(WrapAlways),
-          new WrappingAndBracesStyle.Annotations(WrapAlways),
-          new WrappingAndBracesStyle.Annotations(DoNotWrap),
-          new WrappingAndBracesStyle.Annotations(DoNotWrap),
-          new WrappingAndBracesStyle.Annotations(DoNotWrap)))));
+        spec.recipe(toRecipe(() -> new WrappingAndBracesVisitor<>(
+          List.of(
+            fromStyles(
+              new WrappingAndBracesStyle(
+                120,
+                new WrappingAndBracesStyle.IfStatement(false),
+                new WrappingAndBracesStyle.ChainedMethodCalls(WrapAlways, Arrays.asList("builder", "newBuilder"), false),
+                new WrappingAndBracesStyle.MethodDeclarationParameters(WrapAlways, false, true, false),
+                new WrappingAndBracesStyle.MethodCallArguments(DoNotWrap, false, false, false),
+                new WrappingAndBracesStyle.Annotations(WrapAlways),
+                new WrappingAndBracesStyle.Annotations(WrapAlways),
+                new WrappingAndBracesStyle.Annotations(WrapAlways),
+                new WrappingAndBracesStyle.Annotations(DoNotWrap),
+                new WrappingAndBracesStyle.Annotations(DoNotWrap),
+                new WrappingAndBracesStyle.Annotations(DoNotWrap)))),
+          null)));
     }
 
     @DocumentExample
@@ -672,18 +678,22 @@ class WrapMethodDeclarationParametersTest implements RewriteTest {
     void formatLongLinesOnly() {
         //language=java
         rewriteRun(
-          spec -> spec.recipe(toRecipe(() -> new WrappingAndBracesVisitor<>(new WrappingAndBracesStyle(
-            80,
-            new WrappingAndBracesStyle.IfStatement(false),
-            new WrappingAndBracesStyle.ChainedMethodCalls(WrapAlways, emptyList(), false),
-            new WrappingAndBracesStyle.MethodDeclarationParameters(ChopIfTooLong, false, true, false),
-            new WrappingAndBracesStyle.MethodCallArguments(DoNotWrap, false, false, false),
-            new WrappingAndBracesStyle.Annotations(WrapAlways),
-            new WrappingAndBracesStyle.Annotations(WrapAlways),
-            new WrappingAndBracesStyle.Annotations(WrapAlways),
-            new WrappingAndBracesStyle.Annotations(DoNotWrap),
-            new WrappingAndBracesStyle.Annotations(DoNotWrap),
-            new WrappingAndBracesStyle.Annotations(DoNotWrap))))),
+          spec -> spec.recipe(toRecipe(() -> new WrappingAndBracesVisitor<>(
+            List.of(
+              fromStyles(
+                new WrappingAndBracesStyle(
+                  80,
+                  new WrappingAndBracesStyle.IfStatement(false),
+                  new WrappingAndBracesStyle.ChainedMethodCalls(WrapAlways, emptyList(), false),
+                  new WrappingAndBracesStyle.MethodDeclarationParameters(ChopIfTooLong, false, true, false),
+                  new WrappingAndBracesStyle.MethodCallArguments(DoNotWrap, false, false, false),
+                  new WrappingAndBracesStyle.Annotations(WrapAlways),
+                  new WrappingAndBracesStyle.Annotations(WrapAlways),
+                  new WrappingAndBracesStyle.Annotations(WrapAlways),
+                  new WrappingAndBracesStyle.Annotations(DoNotWrap),
+                  new WrappingAndBracesStyle.Annotations(DoNotWrap),
+                  new WrappingAndBracesStyle.Annotations(DoNotWrap)))),
+            null))),
           java(
             """
               package com.example;
@@ -718,18 +728,22 @@ class WrapMethodDeclarationParametersTest implements RewriteTest {
     void preserveMethodWithMaxLengthBelowThreshold() {
         //language=java
         rewriteRun(
-          spec -> spec.recipe(toRecipe(() -> new WrappingAndBracesVisitor<>(new WrappingAndBracesStyle(
-            120,
-            new WrappingAndBracesStyle.IfStatement(false),
-            new WrappingAndBracesStyle.ChainedMethodCalls(WrapAlways, emptyList(), false),
-            new WrappingAndBracesStyle.MethodDeclarationParameters(ChopIfTooLong, false, false, false),
-            new WrappingAndBracesStyle.MethodCallArguments(DoNotWrap, false, false, false),
-            new WrappingAndBracesStyle.Annotations(WrapAlways),
-            new WrappingAndBracesStyle.Annotations(WrapAlways),
-            new WrappingAndBracesStyle.Annotations(WrapAlways),
-            new WrappingAndBracesStyle.Annotations(DoNotWrap),
-            new WrappingAndBracesStyle.Annotations(DoNotWrap),
-            new WrappingAndBracesStyle.Annotations(DoNotWrap))))),
+          spec -> spec.recipe(toRecipe(() -> new WrappingAndBracesVisitor<>(
+            List.of(
+              fromStyles(
+                new WrappingAndBracesStyle(
+                  120,
+                  new WrappingAndBracesStyle.IfStatement(false),
+                  new WrappingAndBracesStyle.ChainedMethodCalls(WrapAlways, emptyList(), false),
+                  new WrappingAndBracesStyle.MethodDeclarationParameters(ChopIfTooLong, false, false, false),
+                  new WrappingAndBracesStyle.MethodCallArguments(DoNotWrap, false, false, false),
+                  new WrappingAndBracesStyle.Annotations(WrapAlways),
+                  new WrappingAndBracesStyle.Annotations(WrapAlways),
+                  new WrappingAndBracesStyle.Annotations(WrapAlways),
+                  new WrappingAndBracesStyle.Annotations(DoNotWrap),
+                  new WrappingAndBracesStyle.Annotations(DoNotWrap),
+                  new WrappingAndBracesStyle.Annotations(DoNotWrap)))),
+            null))),
           java(
             """
               package com.example;
@@ -747,18 +761,22 @@ class WrapMethodDeclarationParametersTest implements RewriteTest {
     void openCloseNewLine() {
         //language=java
         rewriteRun(
-          spec -> spec.recipe(toRecipe(() -> new WrappingAndBracesVisitor<>(new WrappingAndBracesStyle(
-            120,
-            new WrappingAndBracesStyle.IfStatement(false),
-            new WrappingAndBracesStyle.ChainedMethodCalls(WrapAlways, emptyList(), false),
-            new WrappingAndBracesStyle.MethodDeclarationParameters(WrapAlways, false, false, true),
-            new WrappingAndBracesStyle.MethodCallArguments(DoNotWrap, false, false, false),
-            new WrappingAndBracesStyle.Annotations(WrapAlways),
-            new WrappingAndBracesStyle.Annotations(WrapAlways),
-            new WrappingAndBracesStyle.Annotations(WrapAlways),
-            new WrappingAndBracesStyle.Annotations(DoNotWrap),
-            new WrappingAndBracesStyle.Annotations(DoNotWrap),
-            new WrappingAndBracesStyle.Annotations(DoNotWrap))))),
+          spec -> spec.recipe(toRecipe(() -> new WrappingAndBracesVisitor<>(
+            List.of(
+              fromStyles(
+                new WrappingAndBracesStyle(
+                  120,
+                  new WrappingAndBracesStyle.IfStatement(false),
+                  new WrappingAndBracesStyle.ChainedMethodCalls(WrapAlways, emptyList(), false),
+                  new WrappingAndBracesStyle.MethodDeclarationParameters(WrapAlways, false, false, true),
+                  new WrappingAndBracesStyle.MethodCallArguments(DoNotWrap, false, false, false),
+                  new WrappingAndBracesStyle.Annotations(WrapAlways),
+                  new WrappingAndBracesStyle.Annotations(WrapAlways),
+                  new WrappingAndBracesStyle.Annotations(WrapAlways),
+                  new WrappingAndBracesStyle.Annotations(DoNotWrap),
+                  new WrappingAndBracesStyle.Annotations(DoNotWrap),
+                  new WrappingAndBracesStyle.Annotations(DoNotWrap)))),
+            null))),
           java(
             """
               package com.example;
@@ -809,7 +827,7 @@ class WrapMethodDeclarationParametersTest implements RewriteTest {
           java(
             """
               package com.example;
-
+              
               class Test {
                   void method(String name,
                       int age, boolean active) {
@@ -818,7 +836,7 @@ class WrapMethodDeclarationParametersTest implements RewriteTest {
               """,
             """
               package com.example;
-
+              
               class Test {
                   void method(
               String name,
@@ -838,7 +856,7 @@ class WrapMethodDeclarationParametersTest implements RewriteTest {
           java(
             """
               package com.example;
-
+              
               class Test {
                   void method(String name) {
                   }
@@ -855,7 +873,7 @@ class WrapMethodDeclarationParametersTest implements RewriteTest {
           java(
             """
               package com.example;
-
+              
               class Test {
                   void method() {
                   }
